kubernetes-network-policy-isolation/exports/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"environment":"prod","name":"production","team":"backend"},"name":"production"}}
  creationTimestamp: "2026-09-22T03:19:20Z"
  labels:
    environment: prod
    kubernetes.io/metadata.name: production
    name: production
    team: backend
  name: production
  resourceVersion: "1525"
  uid: 247e7fc8-122a-4fe0-9cc1-708b72f7aec9
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
