kubernetes-network-policy-isolation/exports/production/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-dev-web-to-prod-db","namespace":"production"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"environment":"dev"}},"podSelector":{"matchLabels":{"app":"web","tier":"frontend"}}}],"ports":[{"port":3306,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app":"db","tier":"backend"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:23:09Z"
    generation: 1
    name: allow-dev-web-to-prod-db
    namespace: production
    resourceVersion: "2082"
    uid: 5ea8f2a2-bbc4-4698-bbf1-d6d46803bac9
  spec:
    ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            environment: dev
        podSelector:
          matchLabels:
            app: web
            tier: frontend
      ports:
      - port: 3306
        protocol: TCP
    podSelector:
      matchLabels:
        app: db
        tier: backend
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"production"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-09-22T03:21:29Z"
    generation: 1
    name: default-deny-ingress
    namespace: production
    resourceVersion: "1855"
    uid: 4b02367f-28e0-45d4-84f2-aec52bcaeda4
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
