kubernetes-network-policy-isolation/exports/production/pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      cni.projectcalico.org/containerID: 1e2425b52edc6ef05d80fae90f4aab4cf42d438d5d34c90394223462aa53fe8b
      cni.projectcalico.org/podIP: 192.168.166.141/32
      cni.projectcalico.org/podIPs: 192.168.166.141/32
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app":"db","environment":"prod","tier":"backend"},"name":"database","namespace":"production"},"spec":{"containers":[{"command":["sh","-c","while true; do\n  nc -lk -p 3306 -e echo production-db\ndone\n"],"image":"busybox:1.36","name":"tcp-listener","ports":[{"containerPort":3306}],"resources":{"limits":{"cpu":"50m","memory":"64Mi"},"requests":{"cpu":"10m","memory":"16Mi"}}}]}}
    creationTimestamp: "2026-09-22T03:20:11Z"
    generation: 1
    labels:
      app: db
      environment: prod
      tier: backend
    name: database
    namespace: production
    resourceVersion: "1845"
    uid: ce78d6a7-deab-401b-b4a1-ba335a3c7e3b
  spec:
    containers:
    - command:
      - sh
      - -c
      - |
        while true; do
          nc -lk -p 3306 -e echo production-db
        done
      image: busybox:1.36
      imagePullPolicy: IfNotPresent
      name: tcp-listener
      ports:
      - containerPort: 3306
        protocol: TCP
      resources:
        limits:
          cpu: 50m
          memory: 64Mi
        requests:
          cpu: 10m
          memory: 16Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-rzgw8
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: ip-172-31-10-94
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-rzgw8
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    allocatedResources:
      cpu: 10m
      memory: 16Mi
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:16Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:11Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:20Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:20Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:11Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 10m
        memory: 16Mi
      containerID: containerd://f3b924042735174a188acb190f84a730f39c87d0d9478e70d2df128afddb9caf
      image: docker.io/library/busybox:1.36
      imageID: docker.io/library/busybox@sha256:73aaf090f3d85aa34ee199857f03fa3a95c8ede2ffd4cc2cdb5b94e566b11662
      lastState: {}
      name: tcp-listener
      ready: true
      resources:
        limits:
          cpu: 50m
          memory: 64Mi
        requests:
          cpu: 10m
          memory: 16Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-09-22T03:20:20Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          - 10
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-rzgw8
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.31.10.94
    hostIPs:
    - ip: 172.31.10.94
    observedGeneration: 1
    phase: Running
    podIP: 192.168.166.141
    podIPs:
    - ip: 192.168.166.141
    qosClass: Burstable
    resources:
      limits:
        cpu: 50m
        memory: 64Mi
      requests:
        memory: 16Mi
    startTime: "2026-09-22T03:20:11Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      cni.projectcalico.org/containerID: 05c932f6f6f2366b6ad480a31435601d7e67741a9cb5fe047142295cd9ee824f
      cni.projectcalico.org/podIP: 192.168.166.144/32
      cni.projectcalico.org/podIPs: 192.168.166.144/32
    creationTimestamp: "2026-09-22T03:28:58Z"
    generation: 1
    labels:
      app: client
      environment: prod
      tier: testing
    name: test-client
    namespace: production
    resourceVersion: "2827"
    uid: 28ec908a-71b1-4ab1-a2a9-18ab94c62b5d
  spec:
    containers:
    - command:
      - sh
      - -c
      - |
        while true; do
          sleep 3600
        done
      image: busybox:1.36
      imagePullPolicy: IfNotPresent
      name: client
      resources:
        limits:
          cpu: 50m
          memory: 64Mi
        requests:
          cpu: 10m
          memory: 16Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-fdbss
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: ip-172-31-10-94
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-fdbss
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    allocatedResources:
      cpu: 10m
      memory: 16Mi
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:29:01Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:28:58Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:29:02Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:29:02Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:28:58Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 10m
        memory: 16Mi
      containerID: containerd://62fce122b52517b25d439171b020ea10b5c2e67cfc432cb39b6a741fa2082d25
      image: docker.io/library/busybox:1.36
      imageID: docker.io/library/busybox@sha256:73aaf090f3d85aa34ee199857f03fa3a95c8ede2ffd4cc2cdb5b94e566b11662
      lastState: {}
      name: client
      ready: true
      resources:
        limits:
          cpu: 50m
          memory: 64Mi
        requests:
          cpu: 10m
          memory: 16Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-09-22T03:29:02Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          - 10
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-fdbss
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.31.10.94
    hostIPs:
    - ip: 172.31.10.94
    observedGeneration: 1
    phase: Running
    podIP: 192.168.166.144
    podIPs:
    - ip: 192.168.166.144
    qosClass: Burstable
    resources:
      limits:
        cpu: 50m
        memory: 64Mi
      requests:
        cpu: 10m
        memory: 16Mi
    startTime: "2026-09-22T03:28:58Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      cni.projectcalico.org/containerID: fa32de4c3ae847338a8b66c2b643f211896b9ad167f0242c06e84553738aaa09
      cni.projectcalico.org/podIP: 192.168.166.142/32
      cni.projectcalico.org/podIPs: 192.168.166.142/32
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"app":"web","environment":"prod","tier":"frontend"},"name":"web-app","namespace":"production"},"spec":{"containers":[{"image":"nginx:1.27-alpine","name":"nginx","ports":[{"containerPort":80}],"resources":{"limits":{"cpu":"100m","memory":"96Mi"},"requests":{"cpu":"25m","memory":"32Mi"}}}]}}
    creationTimestamp: "2026-09-22T03:20:11Z"
    generation: 1
    labels:
      app: web
      environment: prod
      tier: frontend
    name: web-app
    namespace: production
    resourceVersion: "1890"
    uid: b465434c-fb82-49e4-af5c-2483c78fb8d3
  spec:
    containers:
    - image: nginx:1.27-alpine
      imagePullPolicy: IfNotPresent
      name: nginx
      ports:
      - containerPort: 80
        protocol: TCP
      resources:
        limits:
          cpu: 100m
          memory: 96Mi
        requests:
          cpu: 25m
          memory: 32Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-wkj6m
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: ip-172-31-10-94
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-wkj6m
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    allocatedResources:
      cpu: 25m
      memory: 32Mi
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:17Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:11Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:20Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:20Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-09-22T03:20:11Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 25m
        memory: 32Mi
      containerID: containerd://31fb73ec429672f5218269ac7342bce41584ef325c23d104ef847027a1f43e2c
      image: docker.io/library/nginx:1.27-alpine
      imageID: docker.io/library/nginx@sha256:65645c7bb6a0661892a8b03b89d0743208a18dd2f3f17a54ef4b76fb8e2f2a10
      lastState: {}
      name: nginx
      ready: true
      resources:
        limits:
          cpu: 100m
          memory: 96Mi
        requests:
          cpu: 25m
          memory: 32Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-09-22T03:20:20Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          - 1
          - 2
          - 3
          - 4
          - 6
          - 10
          - 11
          - 20
          - 26
          - 27
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-wkj6m
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.31.10.94
    hostIPs:
    - ip: 172.31.10.94
    observedGeneration: 1
    phase: Running
    podIP: 192.168.166.142
    podIPs:
    - ip: 192.168.166.142
    qosClass: Burstable
    resources:
      limits:
        cpu: 100m
        memory: 96Mi
      requests:
        memory: 32Mi
    startTime: "2026-09-22T03:20:11Z"
kind: List
metadata:
  resourceVersion: ""
